syntax = "proto3";

option csharp_namespace = "stock_client";

package stock;

service Level {
  rpc GetLevel (LevelRequest) returns (LevelReply);
}

message LevelRequest {
  string name = 1;
}

message LevelReply {
  string message = 1;
}
